Project1/Project1/tiger2.output
State 1 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 decs: dec decs
    3     | dec

    4 dec: tydecs
    5    | vardec
    6    | funcdecs

    7 tydecs: tydec tydecs
    8       | tydec

    9 tydec: TYPE ID EQ ty

   10 ty: ID
   11   | LBRACE tyfields RBRACE
   12   | ARRAY OF ID

   13 tyfield: ID COLON ID

   14 tyfields: tyfield COMMA tyfields
   15         | tyfield

   16 vardec: VAR ID ASSIGN exp
   17       | VAR ID COLON ID ASSIGN exp

   18 funcdecs: funcdec
   19         | funcdec funcdecs

   20 funcdec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   21        | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp
   22        | FUNCTION ID LPAREN RPAREN EQ exp
   23        | FUNCTION ID LPAREN RPAREN COLON ID EQ exp

   24 lvalue: ID
   25       | ID LBRACK exp RBRACK
   26       | lvalue DOT ID
   27       | lvalue LBRACK exp RBRACK

   28 exps: exp SEMICOLON exps
   29     | exp

   30 expList: exp
   31        | exp COMMA expList

   32 field: ID EQ exp

   33 fieldList: field
   34          | field COMMA fieldList

   35 exp: LPAREN exps RPAREN
   36    | lvalue
   37    | NIL
   38    | INT
   39    | STRING
   40    | LPAREN RPAREN
   41    | ID LPAREN RPAREN
   42    | ID LPAREN expList RPAREN
   43    | MINUS exp
   44    | exp PLUS exp
   45    | exp MINUS exp
   46    | exp TIMES exp
   47    | exp DIVIDE exp
   48    | exp EQ exp
   49    | exp NEQ exp
   50    | exp LT exp
   51    | exp LE exp
   52    | exp GT exp
   53    | exp GE exp
   54    | exp AND exp
   55    | exp OR exp
   56    | ID LBRACE RBRACE
   57    | ID LBRACE fieldList RBRACE
   58    | ID LBRACK exp RBRACK OF exp
   59    | lvalue ASSIGN exp
   60    | IF exp THEN exp ELSE exp
   61    | IF exp THEN exp
   62    | WHILE exp DO exp
   63    | FOR ID ASSIGN exp TO exp DO exp
   64    | BREAK
   65    | LET decs IN exps END
   66    | LET decs IN END


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 9 10 12 13 16 17 20 21 22 23 24 25 26 32 41 42 56 57 58 63
STRING (259) 39
INT (260) 38
COMMA (261) 14 31 34
COLON (262) 13 17 21 23
SEMICOLON (263) 28
LPAREN (264) 20 21 22 23 35 40 41 42
RPAREN (265) 20 21 22 23 35 40 41 42
LBRACK (266) 25 27 58
RBRACK (267) 25 27 58
LBRACE (268) 11 56 57
RBRACE (269) 11 56 57
DOT (270) 26
PLUS (271) 44
MINUS (272) 43 45
TIMES (273) 46
DIVIDE (274) 47
EQ (275) 9 20 21 22 23 32 48
NEQ (276) 49
LT (277) 50
LE (278) 51
GT (279) 52
GE (280) 53
AND (281) 54
OR (282) 55
ASSIGN (283) 16 17 59 63
ARRAY (284) 12
IF (285) 60 61
THEN (286) 60 61
ELSE (287) 60
WHILE (288) 62
FOR (289) 63
TO (290) 63
DO (291) 62 63
LET (292) 65 66
IN (293) 65 66
END (294) 65 66
OF (295) 12 58
BREAK (296) 64
NIL (297) 37
FUNCTION (298) 20 21 22 23
VAR (299) 16 17
TYPE (300) 9
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
decs (49)
    on left: 2 3, on right: 2 65 66
dec (50)
    on left: 4 5 6, on right: 2 3
tydecs (51)
    on left: 7 8, on right: 4 7
tydec (52)
    on left: 9, on right: 7 8
ty (53)
    on left: 10 11 12, on right: 9
tyfield (54)
    on left: 13, on right: 14 15
tyfields (55)
    on left: 14 15, on right: 11 14 20 21
vardec (56)
    on left: 16 17, on right: 5
funcdecs (57)
    on left: 18 19, on right: 6 19
funcdec (58)
    on left: 20 21 22 23, on right: 18 19
lvalue (59)
    on left: 24 25 26 27, on right: 26 27 36 59
exps (60)
    on left: 28 29, on right: 28 35 65
expList (61)
    on left: 30 31, on right: 31 42
field (62)
    on left: 32, on right: 33 34
fieldList (63)
    on left: 33 34, on right: 34 57
exp (64)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64 65 66, on right: 1 16 17 20
    21 22 23 25 27 28 29 30 31 32 43 44 45 46 47 48 49 50 51 52 53
    54 55 58 59 60 61 62 63


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    lvalue   go to state 13
    exp      go to state 14


state 1

   24 lvalue: ID .
   25       | ID . LBRACK exp RBRACK
   41 exp: ID . LPAREN RPAREN
   42    | ID . LPAREN expList RPAREN
   56    | ID . LBRACE RBRACE
   57    | ID . LBRACE fieldList RBRACE
   58    | ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    LBRACK    [reduce using rule 24 (lvalue)]
    $default  reduce using rule 24 (lvalue)


state 2

   39 exp: STRING .

    $default  reduce using rule 39 (exp)


state 3

   38 exp: INT .

    $default  reduce using rule 38 (exp)


state 4

   35 exp: LPAREN . exps RPAREN
   40    | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 18
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exps    go to state 19
    exp     go to state 20


state 5

   43 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 21


state 6

   60 exp: IF . exp THEN exp ELSE exp
   61    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 22


state 7

   62 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 23


state 8

   63 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 24


state 9

   65 exp: LET . decs IN exps END
   66    | LET . decs IN END

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    decs      go to state 28
    dec       go to state 29
    tydecs    go to state 30
    tydec     go to state 31
    vardec    go to state 32
    funcdecs  go to state 33
    funcdec   go to state 34


state 10

   64 exp: BREAK .

    $default  reduce using rule 64 (exp)


state 11

   37 exp: NIL .

    $default  reduce using rule 37 (exp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 35


state 13

   26 lvalue: lvalue . DOT ID
   27       | lvalue . LBRACK exp RBRACK
   36 exp: lvalue .
   59    | lvalue . ASSIGN exp

    LBRACK  shift, and go to state 36
    DOT     shift, and go to state 37
    ASSIGN  shift, and go to state 38

    $default  reduce using rule 36 (exp)


state 14

    1 program: exp .
   44 exp: exp . PLUS exp
   45    | exp . MINUS exp
   46    | exp . TIMES exp
   47    | exp . DIVIDE exp
   48    | exp . EQ exp
   49    | exp . NEQ exp
   50    | exp . LT exp
   51    | exp . LE exp
   52    | exp . GT exp
   53    | exp . GE exp
   54    | exp . AND exp
   55    | exp . OR exp

    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50

    $default  reduce using rule 1 (program)


state 15

   41 exp: ID LPAREN . RPAREN
   42    | ID LPAREN . expList RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 51
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue   go to state 13
    expList  go to state 52
    exp      go to state 53


state 16

   25 lvalue: ID LBRACK . exp RBRACK
   58 exp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 54


state 17

   56 exp: ID LBRACE . RBRACE
   57    | ID LBRACE . fieldList RBRACE

    ID      shift, and go to state 55
    RBRACE  shift, and go to state 56

    field      go to state 57
    fieldList  go to state 58


state 18

   40 exp: LPAREN RPAREN .

    $default  reduce using rule 40 (exp)


state 19

   35 exp: LPAREN exps . RPAREN

    RPAREN  shift, and go to state 59


state 20

   28 exps: exp . SEMICOLON exps
   29     | exp .
   44 exp: exp . PLUS exp
   45    | exp . MINUS exp
   46    | exp . TIMES exp
   47    | exp . DIVIDE exp
   48    | exp . EQ exp
   49    | exp . NEQ exp
   50    | exp . LT exp
   51    | exp . LE exp
   52    | exp . GT exp
   53    | exp . GE exp
   54    | exp . AND exp
   55    | exp . OR exp

    SEMICOLON  shift, and go to state 60
    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    TIMES      shift, and go to state 41
    DIVIDE     shift, and go to state 42
    EQ         shift, and go to state 43
    NEQ        shift, and go to state 44
    LT         shift, and go to state 45
    LE         shift, and go to state 46
    GT         shift, and go to state 47
    GE         shift, and go to state 48
    AND        shift, and go to state 49
    OR         shift, and go to state 50

    $default  reduce using rule 29 (exps)


state 21

   43 exp: MINUS exp .
   44    | exp . PLUS exp
   45    | exp . MINUS exp
   46    | exp . TIMES exp
   47    | exp . DIVIDE exp
   48    | exp . EQ exp
   49    | exp . NEQ exp
   50    | exp . LT exp
   51    | exp . LE exp
   52    | exp . GT exp
   53    | exp . GE exp
   54    | exp . AND exp
   55    | exp . OR exp

    $default  reduce using rule 43 (exp)


state 22

   44 exp: exp . PLUS exp
   45    | exp . MINUS exp
   46    | exp . TIMES exp
   47    | exp . DIVIDE exp
   48    | exp . EQ exp
   49    | exp . NEQ exp
   50    | exp . LT exp
   51    | exp . LE exp
   52    | exp . GT exp
   53    | exp . GE exp
   54    | exp . AND exp
   55    | exp . OR exp
   60    | IF exp . THEN exp ELSE exp
   61    | IF exp . THEN exp

    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50
    THEN    shift, and go to state 61


state 23

   44 exp: exp . PLUS exp
   45    | exp . MINUS exp
   46    | exp . TIMES exp
   47    | exp . DIVIDE exp
   48    | exp . EQ exp
   49    | exp . NEQ exp
   50    | exp . LT exp
   51    | exp . LE exp
   52    | exp . GT exp
   53    | exp . GE exp
   54    | exp . AND exp
   55    | exp . OR exp
   62    | WHILE exp . DO exp

    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50
    DO      shift, and go to state 62


state 24

   63 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 63


state 25

   20 funcdec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   21        | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp
   22        | FUNCTION . ID LPAREN RPAREN EQ exp
   23        | FUNCTION . ID LPAREN RPAREN COLON ID EQ exp

    ID  shift, and go to state 64


state 26

   16 vardec: VAR . ID ASSIGN exp
   17       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 65


state 27

    9 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 66


state 28

   65 exp: LET decs . IN exps END
   66    | LET decs . IN END

    IN  shift, and go to state 67


state 29

    2 decs: dec . decs
    3     | dec .

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 3 (decs)

    decs      go to state 68
    dec       go to state 29
    tydecs    go to state 30
    tydec     go to state 31
    vardec    go to state 32
    funcdecs  go to state 33
    funcdec   go to state 34


state 30

    4 dec: tydecs .

    $default  reduce using rule 4 (dec)


state 31

    7 tydecs: tydec . tydecs
    8       | tydec .

    TYPE  shift, and go to state 27

    TYPE      [reduce using rule 8 (tydecs)]
    $default  reduce using rule 8 (tydecs)

    tydecs  go to state 69
    tydec   go to state 31


state 32

    5 dec: vardec .

    $default  reduce using rule 5 (dec)


state 33

    6 dec: funcdecs .

    $default  reduce using rule 6 (dec)


state 34

   18 funcdecs: funcdec .
   19         | funcdec . funcdecs

    FUNCTION  shift, and go to state 25

    FUNCTION  [reduce using rule 18 (funcdecs)]
    $default  reduce using rule 18 (funcdecs)

    funcdecs  go to state 70
    funcdec   go to state 34


state 35

    0 $accept: program $end .

    $default  accept


state 36

   27 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 71


state 37

   26 lvalue: lvalue DOT . ID

    ID  shift, and go to state 72


state 38

   59 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 73


state 39

   44 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 74


state 40

   45 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 75


state 41

   46 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 76


state 42

   47 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 77


state 43

   48 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 78


state 44

   49 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 79


state 45

   50 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 80


state 46

   51 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 81


state 47

   52 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 82


state 48

   53 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 83


state 49

   54 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 84


state 50

   55 exp: exp OR . exp
